# site-festa-junina

./: README.md  pyproject.toml
backend/: app.py  dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/static/: galeria.js  index.js  style.css
backend/templates/: galeria.html  home.html  index.html  script.js  style.css
frontend/: album.html  script.js  style.css
site-festa-junina/frontend/: index.html  style.css
