[tool.poetry]
name = "site-festa-junina"
version = "0.1.0"
description = ""
authors = ["Maisa Gomes Gabriel Lima"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
